--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 
 
 {
-	"ip":"SamsulGG15.aternos.me",
-	"port": "25565",
+	"ip":"free5.freemc.host",
+	"port": "42161",
 	"name": "Gilang",
 	"auto-night-skip":"false"
 }
