--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 
 
 {
-	"ip":"SamsulGG15.aternos.me",
+	"ip":"azeronetwork.mc-srv.com",
 	"port": "25565",
-	"name": "Orang",
+	"name": "Akugila",
 	"auto-night-skip":"false"
 }
