--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 
 
 {
-	"ip":"azeronetwork.mc-srv.com",
+	"ip":"samsul23.aternos.me",
 	"port": "25565",
 	"name": "Akugila",
 	"auto-night-skip":"false"
