--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 
 
 {
-	"ip":"samsul23.aternos.me",
+	"ip":"samsulgg15.aternos.me",
 	"port": "25565",
-	"name": "Akugila",
+	"name": "Samsul",
 	"auto-night-skip":"false"
 }
