--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 
 
 {
-	"ip":"samsulgg15.aternos.me",
+	"ip":"play.azeronetwork.tk",
 	"port": "25565",
 	"name": "Samsul",
 	"auto-night-skip":"false"
