--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 
 
 {
-	"ip":"play.reitszmc.tk",
+	"ip":"Pokemonsoawj.aternos.me",
 	"port": "25565",
-	"name": "SamsulGOBLOK",
+	"name": "Bosblue_Gay",
 	"auto-night-skip":"false"
 }
