--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 
 
 {
-	"ip":"Pokemonsoawj.aternos.me",
+	"ip":"samsulgg15.pokus.cc",
 	"port": "25565",
 	"name": "Bosblue_Gay",
 	"auto-night-skip":"false"
