--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 
 
 {
-	"ip":"samsulgg15.pokus.cc",
+	"ip":"SamulF.aternos.me",
 	"port": "25565",
-	"name": "Bosblue_Gay",
+	"name": "SAMSUL",
 	"auto-night-skip":"false"
 }
