--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 
 
 {
-	"ip":"SamulF.aternos.me",
-	"port": "25565",
-	"name": "SAMSUL",
+	"ip":"game6.falixserver.net",
+	"port": "33406",
+	"name": "apaL",
 	"auto-night-skip":"false"
 }
